--- a/cider-ci/task-components/geckodriver.yml
+++ b/cider-ci/task-components/geckodriver.yml
@@ -5,13 +5,8 @@ scripts:
     exclusive_executor_resource: asdf-geckodriver
     body: |
       #!/usr/bin/env bash
-      set -euxo pipefail
-      if [[ ! -d ~/.asdf/plugins/geckodriver ]]; then
-        asdf plugin add geckodriver https://github.com/DrTom/asdf-geckodriver.git
-      else
-        asdf plugin update geckodriver
-      fi
-      asdf install geckodriver
+      set -euo pipefail
+      ./bin/env/geckodriver-setup
   test:
     start_when:
       geckodriver is installed:
