--- a/cider-ci/task-components/nodejs.yml
+++ b/cider-ci/task-components/nodejs.yml
@@ -6,12 +6,7 @@ scripts:
     body: |
       #!/usr/bin/env bash
       set -euo pipefail
-      if [[ ! -d ~/.asdf/plugins/nodejs ]]; then
-        asdf plugin add nodejs https://github.com/asdf-vm/asdf-nodejs.git
-      else
-        asdf plugin update nodejs
-      fi
-      asdf install nodejs
+      ./bin/env/nodejs-setup
   test:
     start_when:
       nodejs is installed:
