--- a/cider-ci.yml
+++ b/cider-ci.yml
@@ -73,6 +73,7 @@ jobs:
     priority: 3
     run_when: *DEFAULT_TRIGGERS
     context:
+      include: [cider-ci/context-components/env.yml]
       task_defaults:
         environment_variables:
           GIT_LINEAR_HISTORY_CHECK_START_SHA: 3eef3fe03c77970a301e641812e11a0d80a8d188
@@ -150,8 +151,9 @@ jobs:
     priority: 999 # "delivery" job = high priority
     context:
       include:
-        - path: cider-ci/context-components/merge-checks.yml
-          submodule: [datalayer]
+        - path: cider-ci/context-components/env.yml
+        - submodule: [datalayer]
+          path: cider-ci/context-components/merge-checks.yml
     depends_on:
       all-tests: { job_key: all-tests, type: job, states: [passed] }
       good to merge of the datalayer:
