Generalize CI setup for use in top level integration tests

--- a/cider-ci/context-components/rails-setup.yml
+++ b/cider-ci/context-components/rails-setup.yml
@@ -1,24 +1,10 @@
 task_defaults:
   include:
     - cider-ci/task-components/ruby-setup.yml
+    - cider-ci/task-components/database.yml
     - submodule: [datalayer]
       path: cider-ci/task-components/database.yml
 
+
   max_trials: 2
   dispatch_storm_delay_duration: 1 seconds
-
-
-  scripts:
-    webapp-configure-rails-db:
-      start_when:
-        datalayer-configure-rails-db passed:
-          script_key: datalayer-configure-rails-db
-      body: |
-        #!/usr/bin/env bash
-        set -euo pipefail
-        ln -s $DATALAYER_DIR/config/database.yml  $WEBAPP_DIR/config/database.yml
-    test:
-      start_when:
-        webapp-configure-rails-db has passed:
-          script_key: webapp-configure-rails-db
-
