Upgrage to PostgreSQL 15

--- a/cider-ci/context-components/env.yml
+++ b/cider-ci/context-components/env.yml
@@ -11,3 +11,4 @@ task_defaults:
     WEBAPP_DIR: '{{CIDER_CI_WORKING_DIR}}'
     DATALAYER_DIR: '{{WEBAPP_DIR}}/datalayer'
     DATABASE: madek_webapp_{{CIDER_CI_TRIAL_ID}}
+    PGVERSION: '15'
