--- a/cider-ci/generators/plain_features.yml
+++ b/cider-ci/generators/plain_features.yml
@@ -3531,6 +3531,12 @@
   environment_variables:
     RSPEC_NAME: "./spec/features/search_spec.rb:78"
     RSPEC_TEST: "./spec/features/search_spec.rb[1:3:5]"
+"./spec/features/section_labels_spec.rb[1:1]":
+  name: "./spec/features/section_labels_spec.rb[1:1]"
+  description: Section labels are shown on collection and media entry detail view
+  environment_variables:
+    RSPEC_NAME: "./spec/features/section_labels_spec.rb:20"
+    RSPEC_TEST: "./spec/features/section_labels_spec.rb[1:1]"
 "./spec/features/session/session_spec.rb[1:1:1:1:1:1]":
   name: "./spec/features/session/session_spec.rb[1:1:1:1:1:1]"
   description: Session Signing in redirecting to the previous page when previous page
