notify when session expiring soon

--- a/cider-ci/generators/plain_features.yml
+++ b/cider-ci/generators/plain_features.yml
@@ -3577,8 +3577,20 @@
   description: 'Feature: Session Expiration of Session after configured timeout when
     application has a session timeout 10 seconds the user is logged out after 12 seconds'
   environment_variables:
-    RSPEC_NAME: "./spec/features/session/expiration_spec.rb:14"
+    RSPEC_NAME: "./spec/features/session/expiration_spec.rb:13"
     RSPEC_TEST: "./spec/features/session/expiration_spec.rb[1:1:1:1]"
+"./spec/features/session/expiration_spec.rb[1:2:1]":
+  name: "./spec/features/session/expiration_spec.rb[1:2:1]"
+  description: 'Feature: Session Flash notification if session expiring soon red'
+  environment_variables:
+    RSPEC_NAME: "./spec/features/session/expiration_spec.rb:26"
+    RSPEC_TEST: "./spec/features/session/expiration_spec.rb[1:2:1]"
+"./spec/features/session/expiration_spec.rb[1:2:2]":
+  name: "./spec/features/session/expiration_spec.rb[1:2:2]"
+  description: 'Feature: Session Flash notification if session expiring soon orange'
+  environment_variables:
+    RSPEC_NAME: "./spec/features/session/expiration_spec.rb:33"
+    RSPEC_TEST: "./spec/features/session/expiration_spec.rb[1:2:2]"
 "./spec/features/session/info_spec.rb[1:1:1]":
   name: "./spec/features/session/info_spec.rb[1:1:1]"
   description: Session session info the user_session contains http_user_agent and
